--- a/dashboard_en.html
+++ b/dashboard_en.html
@@ -39,18 +39,18 @@
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                     <div class="bg-white rounded-xl border border-[var(--divider-color)] shadow-sm p-6">
                         <p class="text-lg font-medium text-[var(--text-secondary-color)]">Total Sales (Last 30 Days)</p>
-                        <p class="text-4xl font-bold text-[var(--primary-color)] mt-2">$28,900</p>
-                        <p class="text-sm text-[var(--text-secondary-color)] mt-1">+12% vs previous period</p>
+                        <p id="total-sales" class="text-4xl font-bold text-[var(--primary-color)] mt-2">$28,900</p>
+                        <p id="total-sales-trend" class="text-sm text-[var(--text-secondary-color)] mt-1">+12% vs previous period</p>
                     </div>
                     <div class="bg-white rounded-xl border border-[var(--divider-color)] shadow-sm p-6">
                         <p class="text-lg font-medium text-[var(--text-secondary-color)]">Total Orders (Last 30 Days)</p>
-                        <p class="text-4xl font-bold text-[var(--primary-color)] mt-2">985</p>
-                        <p class="text-sm text-[var(--text-secondary-color)] mt-1">+8% vs previous period</p>
+                        <p id="total-orders" class="text-4xl font-bold text-[var(--primary-color)] mt-2">985</p>
+                        <p id="total-orders-trend" class="text-sm text-[var(--text-secondary-color)] mt-1">+8% vs previous period</p>
                     </div>
                     <div class="bg-white rounded-xl border border-[var(--divider-color)] shadow-sm p-6">
                         <p class="text-lg font-medium text-[var(--text-secondary-color)]">Total Profit (Last 30 Days)</p>
-                        <p class="text-4xl font-bold text-[var(--primary-color)] mt-2">$11,560</p>
-                        <p class="text-sm text-[var(--text-secondary-color)] mt-1">+15% vs previous period</p>
+                        <p id="total-profit" class="text-4xl font-bold text-[var(--primary-color)] mt-2">$11,560</p>
+                        <p id="total-profit-trend" class="text-sm text-[var(--text-secondary-color)] mt-1">+15% vs previous period</p>
                     </div>
                 </div>
             </section>
@@ -60,7 +60,7 @@
                 <!-- Etsy Panel -->
                 <div class="bg-white rounded-xl border border-[var(--divider-color)] shadow-sm p-6">
                     <h2 class="text-[var(--text-primary-color)] text-2xl font-bold leading-tight tracking-tight mb-4">Etsy Performance</h2>
-                    <p class="text-lg font-medium text-[var(--text-secondary-color)]">Sales: <span class="text-[var(--primary-color)] font-bold">$8,200</span> (28% of total)</p>
+                    <p class="text-lg font-medium text-[var(--text-secondary-color)]">Sales: <span id="etsy-sales-value" class="text-[var(--primary-color)] font-bold">$8,200</span> (<span id="etsy-sales-percentage">28</span>% of total)</p>
                     <div class="h-32 my-4">
                         <canvas id="etsySalesChart"></canvas>
                     </div>
@@ -76,7 +76,8 @@
                                     <th scope="col" class="px-2 py-2 text-left text-xs font-medium text-[var(--text-secondary-color)] uppercase tracking-wider">Status</th>
                                 </tr>
                             </thead>
-                            <tbody class="bg-white divide-y divide-[var(--divider-color)]">
+                            <tbody id="etsy-orders-table-body" class="bg-white divide-y divide-[var(--divider-color)]">
+                                <!-- Orders will be dynamically loaded here by JavaScript -->
                                 <tr>
                                     <td class="px-2 py-2 whitespace-nowrap text-sm font-medium text-[var(--text-primary-color)]">#E10023</td>
                                     <td class="px-2 py-2 whitespace-nowrap text-sm text-[var(--text-secondary-color)]">Handmade Mug</td>
@@ -100,7 +101,7 @@
                 <!-- Trendyol Panel -->
                 <div class="bg-white rounded-xl border border-[var(--divider-color)] shadow-sm p-6">
                     <h2 class="text-[var(--text-primary-color)] text-2xl font-bold leading-tight tracking-tight mb-4">Trendyol Performance</h2>
-                    <p class="text-lg font-medium text-[var(--text-secondary-color)]">Sales: <span class="text-[var(--primary-color)] font-bold">$7,800</span> (27% of total)</p>
+                    <p class="text-lg font-medium text-[var(--text-secondary-color)]">Sales: <span id="trendyol-sales-value" class="text-[var(--primary-color)] font-bold">$7,800</span> (<span id="trendyol-sales-percentage">27</span>% of total)</p>
                     <div class="h-32 my-4">
                         <canvas id="trendyolSalesChart"></canvas>
                     </div>
@@ -116,7 +117,8 @@
                                     <th scope="col" class="px-2 py-2 text-left text-xs font-medium text-[var(--text-secondary-color)] uppercase tracking-wider">Status</th>
                                 </tr>
                             </thead>
-                            <tbody class="bg-white divide-y divide-[var(--divider-color)]">
+                            <tbody id="trendyol-orders-table-body" class="bg-white divide-y divide-[var(--divider-color)]">
+                                <!-- Orders will be dynamically loaded here by JavaScript -->
                                 <tr>
                                     <td class="px-2 py-2 whitespace-nowrap text-sm font-medium text-[var(--text-primary-color)]">#T20056</td>
                                     <td class="px-2 py-2 whitespace-nowrap text-sm text-[var(--text-secondary-color)]">Organic Cotton T-shirt</td>
@@ -124,7 +126,6 @@
                                     <td class="px-2 py-2 whitespace-nowrap text-sm text-green-600">Delivered</td>
                                 </tr>
                                 <tr>
-                                    <td class="px-2 py-2 whitespace-nowrap text-sm font-medium text-[var(--text-primary-color)]">#T20055</td>
                                     <td class="px-2 py-2 whitespace-nowrap text-sm text-[var(--text-secondary-color)]">Denim Jeans</td>
                                     <td class="px-2 py-2 whitespace-nowrap text-sm text-[var(--text-secondary-color)]">$55.00</td>
                                     <td class="px-2 py-2 whitespace-nowrap text-sm text-orange-600">In Transit</td>
@@ -140,7 +141,7 @@
                 <!-- Hepsiburada Panel -->
                 <div class="bg-white rounded-xl border border-[var(--divider-color)] shadow-sm p-6">
                     <h2 class="text-[var(--text-primary-color)] text-2xl font-bold leading-tight tracking-tight mb-4">Hepsiburada Performance</h2>
-                    <p class="text-lg font-medium text-[var(--text-secondary-color)]">Sales: <span class="text-[var(--primary-color)] font-bold">$6,500</span> (22% of total)</p>
+                    <p class="text-lg font-medium text-[var(--text-secondary-color)]">Sales: <span id="hepsiburada-sales-value" class="text-[var(--primary-color)] font-bold">$6,500</span> (<span id="hepsiburada-sales-percentage">22</span>% of total)</p>
                     <div class="h-32 my-4">
                         <canvas id="hepsiburadaSalesChart"></canvas>
                     </div>
@@ -156,7 +157,8 @@
                                     <th scope="col" class="px-2 py-2 text-left text-xs font-medium text-[var(--text-secondary-color)] uppercase tracking-wider">Status</th>
                                 </tr>
                             </thead>
-                            <tbody class="bg-white divide-y divide-[var(--divider-color)]">
+                            <tbody id="hepsiburada-orders-table-body" class="bg-white divide-y divide-[var(--divider-color)]">
+                                <!-- Orders will be dynamically loaded here by JavaScript -->
                                 <tr>
                                     <td class="px-2 py-2 whitespace-nowrap text-sm font-medium text-[var(--text-primary-color)]">#H30011</td>
                                     <td class="px-2 py-2 whitespace-nowrap text-sm text-[var(--text-secondary-color)]">Smartwatch</td>
@@ -164,7 +166,6 @@
                                     <td class="px-2 py-2 whitespace-nowrap text-sm text-green-600">Processing</td>
                                 </tr>
                                 <tr>
-                                    <td class="px-2 py-2 whitespace-nowrap text-sm font-medium text-[var(--text-primary-color)]">#H30010</td>
                                     <td class="px-2 py-2 whitespace-nowrap text-sm text-[var(--text-secondary-color)]">Wireless Earbuds</td>
                                     <td class="px-2 py-2 whitespace-nowrap text-sm text-[var(--text-secondary-color)]">$80.00</td>
                                     <td class="px-2 py-2 whitespace-nowrap text-sm text-orange-600">Confirmed</td>
@@ -180,7 +181,7 @@
                 <!-- Website Panel -->
                 <div class="bg-white rounded-xl border border-[var(--divider-color)] shadow-sm p-6">
                     <h2 class="text-[var(--text-primary-color)] text-2xl font-bold leading-tight tracking-tight mb-4">Website Performance</h2>
-                    <p class="text-lg font-medium text-[var(--text-secondary-color)]">Sales: <span class="text-[var(--primary-color)] font-bold">$6,400</span> (22% of total)</p>
+                    <p class="text-lg font-medium text-[var(--text-secondary-color)]">Sales: <span id="website-sales-value" class="text-[var(--primary-color)] font-bold">$6,400</span> (<span id="website-sales-percentage">22</span>% of total)</p>
                     <div class="h-32 my-4">
                         <canvas id="websiteSalesChart"></canvas>
                     </div>
@@ -196,7 +197,8 @@
                                     <th scope="col" class="px-2 py-2 text-left text-xs font-medium text-[var(--text-secondary-color)] uppercase tracking-wider">Status</th>
                                 </tr>
                             </thead>
-                            <tbody class="bg-white divide-y divide-[var(--divider-color)]">
+                            <tbody id="website-orders-table-body" class="bg-white divide-y divide-[var(--divider-color)]">
+                                <!-- Orders will be dynamically loaded here by JavaScript -->
                                 <tr>
                                     <td class="px-2 py-2 whitespace-nowrap text-sm font-medium text-[var(--text-primary-color)]">#W40078</td>
                                     <td class="px-2 py-2 whitespace-nowrap text-sm text-[var(--text-secondary-color)]">Premium Coffee Beans</td>
@@ -204,7 +206,6 @@
                                     <td class="px-2 py-2 whitespace-nowrap text-sm text-green-600">Fulfilled</td>
                                 </tr>
                                 <tr>
-                                    <td class="px-2 py-2 whitespace-nowrap text-sm font-medium text-[var(--text-primary-color)]">#W40077</td>
                                     <td class="px-2 py-2 whitespace-nowrap text-sm text-[var(--text-secondary-color)]">Espresso Machine</td>
                                     <td class="px-2 py-2 whitespace-nowrap text-sm text-[var(--text-secondary-color)]">$300.00</td>
                                     <td class="px-2 py-2 whitespace-nowrap text-sm text-orange-600">Processing</td>
@@ -222,7 +223,7 @@
             <section class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-12">
                 <div class="bg-white rounded-xl border border-[var(--divider-color)] shadow-sm p-6">
                     <h2 class="text-[var(--text-primary-color)] text-2xl font-bold leading-tight tracking-tight mb-6">Quick Stats</h2>
-                    <ul class="space-y-4 text-base text-[var(--text-secondary-color)]">
+                    <ul id="quick-stats-list" class="space-y-4 text-base text-[var(--text-secondary-color)]">
                         <li><strong class="text-[var(--text-primary-color)]">Top Performing Product:</strong> Organic Cotton T-shirt <span class="text-sm">(350 sales)</span></li>
                         <li><strong class="text-[var(--text-primary-color)]">Best Channel (by revenue):</strong> Etsy <span class="text-sm">($8,200)</span></li>
                         <li><strong class="text-[var(--text-primary-color)]">Overall Average Order Value:</strong> $29.34</li>
@@ -237,7 +238,7 @@
                     <p class="text-base text-[var(--text-secondary-color)] mb-4">
                         Our AI engine is constantly analyzing your data to provide actionable insights.
                     </p>
-                    <ul class="list-disc list-inside space-y-2 text-base text-[var(--text-secondary-color)]">
+                    <ul id="ai-recommendations-list" class="list-disc list-inside space-y-2 text-base text-[var(--text-secondary-color)]">
                         <li>Consider launching a new ad campaign for "Smartwatch" on Hepsiburada.</li>
                         <li>Optimize product descriptions for "Espresso Machine" on your Website with more benefit-driven language.</li>
                         <li>Review pricing strategy for "Custom Necklace" on Etsy to improve conversion rate by 5%.</li>
@@ -259,80 +260,7 @@
 <!-- Load our app script at the end of the body -->
 <script src="app.js"></script>
 
-<!-- Chart Initialization Script -->
-<script>
-    document.addEventListener("DOMContentLoaded", function() {
-        const createSalesChart = (ctxId, dataValues, label, color) => {
-            const ctx = document.getElementById(ctxId);
-            if (!ctx) return;
-
-            new Chart(ctx, {
-                type: 'line',
-                data: {
-                    labels: ['Week 1', 'Week 2', 'Week 3', 'Week 4'],
-                    datasets: [{
-                        label: label,
-                        data: dataValues,
-                        borderColor: color,
-                        backgroundColor: Chart.helpers.color(color).alpha(0.2).rgbString(),
-                        fill: true,
-                        tension: 0.3,
-                        pointRadius: 3,
-                        pointBackgroundColor: color
-                    }]
-                },
-                options: {
-                    responsive: true,
-                    maintainAspectRatio: false,
-                    plugins: {
-                        legend: {
-                            display: false,
-                        },
-                        tooltip: {
-                            mode: 'index',
-                            intersect: false,
-                        }
-                    },
-                    scales: {
-                        x: {
-                            display: true,
-                            title: {
-                                display: false,
-                            },
-                            grid: {
-                                display: false,
-                            }
-                        },
-                        y: {
-                            display: false, // Hide Y-axis for cleaner look in small charts
-                            title: {
-                                display: false,
-                            },
-                            beginAtZero: true,
-                            grid: {
-                                display: false,
-                            }
-                        }
-                    },
-                    layout: {
-                        padding: {
-                            left: 0,
-                            right: 0,
-                            top: 0,
-                            bottom: 0
-                        }
-                    }
-                }
-            });
-        };
-
-        // Initialize charts for each channel with unique dummy data
-        createSalesChart('etsySalesChart', [1800, 2100, 2500, 2800], 'Etsy Sales', '#0ecd90'); 
-        createSalesChart('trendyolSalesChart', [1500, 1700, 2200, 2400], 'Trendyol Sales', '#0ecd90');
-        createSalesChart('hepsiburadaSalesChart', [1100, 1300, 1600, 1900], 'Hepsiburada Sales', '#0ecd90');
-        createSalesChart('websiteSalesChart', [900, 1100, 1400, 1700], 'Website Sales', '#0ecd90');
-    });
-</script>
+<!-- Chart Initialization Script is now part of app.js -->
 
 </body>
 </html>
