--- a/pricing.html
+++ b/pricing.html
@@ -37,7 +37,7 @@
             <div class="border border-[var(--divider-color)] rounded-lg p-8 flex flex-col">
                 <h3 class="text-2xl font-bold mb-2">Temel Plan</h3>
                 <p class="text-[var(--text-secondary-color)] mb-6">Yapay zeka süper güçleri isteyen, işini kendi yapan satıcılar için.</p>
-                <p class="text-5xl font-bold mb-6">10%<span class="text-lg font-medium text-[var(--text-secondary-color)]"> / kârdan</span></p>
+                <p id="basic-plan-price" class="text-5xl font-bold mb-6">10%<span class="text-lg font-medium text-[var(--text-secondary-color)]"> / kârdan</span></p>
                 <ul class="space-y-4 text-[var(--text-secondary-color)] mb-8 grow">
                     <li class="flex items-start"><svg class="h-6 w-6 text-[var(--primary-color)] mr-3 flex-shrink-0" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" /></svg><span>Tam YZ Araçları Paketi</span></li>
                     <li class="flex items-start"><svg class="h-6 w-6 text-[var(--primary-color)] mr-3 flex-shrink-0" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" /></svg><span>Çoklu Kanal Entegrasyonu</span></li>
@@ -50,7 +50,7 @@
                  <p class="absolute top-0 -translate-y-1/2 bg-[var(--primary-color)] text-white px-4 py-1 rounded-full text-sm font-bold self-center">EN POPÜLER</p>
                 <h3 class="text-2xl font-bold mb-2 pt-4">Partner Planı</h3>
                 <p class="text-[var(--text-secondary-color)] mb-6">Siz üretin ve gönderin. Geriye kalan her şeyi biz hallederiz.</p>
-                <p class="text-5xl font-bold mb-6">50%<span class="text-lg font-medium text-[var(--text-secondary-color)]"> / kârdan</span></p>
+                <p id="partner-plan-price" class="text-5xl font-bold mb-6">50%<span class="text-lg font-medium text-[var(--text-secondary-color)]"> / kârdan</span></p>
                 <ul class="space-y-4 text-[var(--text-secondary-color)] mb-8 grow">
                     <li class="flex items-start"><svg class="h-6 w-6 text-[var(--primary-color)] mr-3 flex-shrink-0" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" /></svg><span>Temel Plandaki Her Şey, ARTI:</span></li>
                     <li class="flex items-start"><svg class="h-6 w-6 text-[var(--primary-color)] mr-3 flex-shrink-0" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" /></svg><span>Marka & Web Sitesi Kurulumu</span></li>
@@ -63,7 +63,7 @@
             <div class="border border-[var(--divider-color)] rounded-lg p-8 flex flex-col">
                 <h3 class="text-2xl font-bold mb-2">Aylık Abonelik</h3>
                 <p class="text-[var(--text-secondary-color)] mb-6">Belirli araçlara mı ihtiyacınız var? Sadece ihtiyacınız olan özellikler için ödeme yapın.</p>
-                <p class="text-5xl font-bold mb-6">₺100<span class="text-lg font-medium text-[var(--text-secondary-color)]">'den başlayan fiyatlarla</span></p>
+                <p id="monthly-sub-price" class="text-5xl font-bold mb-6">₺100<span class="text-lg font-medium text-[var(--text-secondary-color)]">'den başlayan fiyatlarla</span></p>
                 <ul class="space-y-4 text-[var(--text-secondary-color)] mb-8 grow">
                     <li class="flex items-start"><svg class="h-6 w-6 text-[var(--primary-color)] mr-3 flex-shrink-0" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" /></svg><span>Kendi planınızı oluşturun</span></li>
                     <li class="flex items-start"><svg class="h-6 w-6 text-[var(--primary-color)] mr-3 flex-shrink-0" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M5 13l4 4L19 7" /></svg><span>İstediğiniz zaman iptal edin</span></li>
@@ -76,7 +76,7 @@
                 <h3 class="text-2xl font-bold mb-2">Dinamik Plan</h3>
                 <p class="text-[var(--text-secondary-color)] mb-6">Benzersiz ihtiyaçlar için özel çözümler ve ayarlanabilir kâr paylaşımı.</p>
                 <div class="my-auto text-center">
-                    <p class="text-3xl font-bold mb-4">Size Özel Ortaklık</p>
+                    <p id="dynamic-plan-tagline" class="text-3xl font-bold mb-4">Size Özel Ortaklık</p>
                     <p class="text-[var(--text-secondary-color)]">İş yükünü sizinle bizim aramızda paylaştıran özel bir ortaklık kuralım. Mükemmel uyumu bulmak için bize ulaşın.</p>
                 </div>
                 <div class="grow"></div>
