--- a/footer.html
+++ b/footer.html
@@ -1,12 +1,12 @@
-<footer class="bg-[var(--background-secondary-color)] text-[var(--text-secondary-color)] px-10 py-12 transition-colors duration-300">
-<div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-8">
-<div class="col-span-1 md:col-span-1">
+<footer class="bg-[var(--background-secondary-color)] text-[var(--text-secondary-color)] px-4 sm:px-10 py-8 md:py-12 transition-colors duration-300">
+<div class="max-w-7xl mx-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8">
+<div class="col-span-1 sm:col-span-2 md:col-span-1 flex flex-col items-center sm:items-start text-center sm:text-left">
 <a class="flex items-center gap-3 text-2xl font-bold tracking-tight text-[var(--text-primary-color)]" href="index.html">
-<img src="ekobol.ico" alt="Ekobol Logo" class="h-24 w-24">
+<img src="ekobol.ico" alt="Ekobol Logo" class="h-20 w-20 sm:h-24 sm:w-24">
 </a>
-<p class="mt-4 text-sm">Yapay zeka ile e-ticaret yolculuğunuzu güçlendiriyoruz.</p>
+<p class="mt-4 text-sm max-w-xs">Yapay zeka ile e-ticaret yolculuğunuzu güçlendiriyoruz.</p>
 </div>
-<div>
+<div class="text-center sm:text-left">
 <h4 class="font-semibold text-[var(--text-primary-color)] mb-4">Ürün</h4>
 <ul class="space-y-3">
 <li><a class="hover:text-[var(--primary-color)] transition-colors" href="product.html">Özellikler</a></li>
@@ -15,7 +15,7 @@
 <li><a class="hover:text-[var(--primary-color)] transition-colors" href="blog.html">Güncellemeler</a></li>
 </ul>
 </div>
-<div>
+<div class="text-center sm:text-left">
 <h4 class="font-semibold text-[var(--text-primary-color)] mb-4">Şirket</h4>
 <ul class="space-y-3">
 <li><a class="hover:text-[var(--primary-color)] transition-colors" href="about.html">Hakkımızda</a></li>
@@ -24,7 +24,7 @@
 <li><a class="hover:text-[var(--primary-color)] transition-colors" href="resources.html">Kaynaklar</a></li>
 </ul>
 </div>
-<div>
+<div class="text-center sm:text-left">
 <h4 class="font-semibold text-[var(--text-primary-color)] mb-4">Yasal</h4>
 <ul class="space-y-3">
 <li><a class="hover:text-[var(--primary-color)] transition-colors" href="terms.html">Hizmet Şartları</a></li>
@@ -33,7 +33,7 @@
 </ul>
 </div>
 </div>
-<div class="mt-12 pt-8 border-t border-[var(--border-color)] text-center text-sm transition-colors duration-300">
+<div class="mt-8 pt-6 border-t border-[var(--border-color)] text-center text-sm transition-colors duration-300">
 <p>© 2024 Ekobol. Tüm hakları saklıdır.</p>
 </div>
 </footer>
