--- a/footer_en.html
+++ b/footer_en.html
@@ -1,10 +1,10 @@
-<footer class="bg-[var(--background-secondary-color)] text-[var(--text-secondary-color)] px-10 py-12 transition-colors duration-300">
-<div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-8">
-<div class="col-span-1 md:col-span-1">
+<footer class="bg-[var(--background-secondary-color)] text-[var(--text-secondary-color)] px-4 sm:px-10 py-8 md:py-12 transition-colors duration-300">
+<div class="max-w-7xl mx-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8">
+<div class="col-span-1 sm:col-span-2 md:col-span-1 flex flex-col items-center sm:items-start text-center sm:text-left">
 <a class="flex items-center gap-3 text-2xl font-bold tracking-tight text-[var(--text-primary-color)]" href="index_en.html">
-<img src="ekobol.ico" alt="Ekobol Logo" class="h-24 w-24">
+<img src="ekobol.ico" alt="Ekobol Logo" class="h-20 w-20 sm:h-24 sm:w-24">
 </a>
-<p class="mt-4 text-sm">Empowering your e-commerce journey with AI.</p>
+<p class="mt-4 text-sm max-w-xs">Empowering your e-commerce journey with AI.</p>
 </div>
 <div>
 <h4 class="font-semibold text-[var(--text-primary-color)] mb-4">Product</h4>
@@ -33,7 +33,7 @@
 </ul>
 </div>
 </div>
-<div class="mt-12 pt-8 border-t border-[var(--border-color)] text-center text-sm transition-colors duration-300">
+<div class="mt-8 pt-6 border-t border-[var(--border-color)] text-center text-sm transition-colors duration-300">
 <p>© 2024 Ekobol. All rights reserved.</p>
 </div>
 </footer>
